arc-script/arc-script-test/insta/src/snapshots/hir@fib.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/fib.arc
---
fun fib(n_0: i32) -> i32 {
    if n_0 > 2 {
        crate::fib(n_0 - 1) + crate::fib(n_0 - 2)
    } else {
        0
    }
}
fun test() -> i32 {
    crate::fib(5)
}

