arc-script/arc-script-test/insta/src/snapshots/hir@fun.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/fun.arc
---
fun max(a_0: i32, b_0: i32) -> i32 {
    let c_0: bool = a_0 > b_0 in
    if c_0 {
        a_0
    } else {
        b_0
    }
}
fun test() -> i32 {
    crate::max(1, 2)
}

