arc-script/arc-script-test/insta/src/snapshots/hir@lambda.arc.snap
---
source: arc-script-core/tests/insta/mod.rs
expression: s
input_file: arc-script-core/tests/insta/snapshot-tests/lambda.arc
---
fun x_0(i_0: i32) -> i32 {
    i_0 + 1
}
fun test() -> i32 {
    let increment_0: fun(i32) -> i32 = crate::x_0 in
    let foo_0: i32 = 1 in
    increment_0(foo_0)
}

