arc-script/arc-script-test/insta/src/snapshots/hir@option.arc.snap
---
source: arc-script-test-insta/src/lib.rs
expression: s
input_file: arc-script-test-insta/src/expect-pass/option.arc
---
enum Option {
    Some(i32),
    None
}
fun x_2() -> () {
    ()
}
fun main() -> () {
    let x_0: crate::Option = enwrap[crate::Option::Some](3) in
    if is[crate::Option::Some](x_0) {
        let y_0: i32 = unwrap[crate::Option::Some](x_0) in
        ()
    } else {
        crate::x_2()
    }
}

