arc-script/arc-script-test/insta/src/snapshots/hir@path.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/path.arc
---
fun main() -> unit {
    let x_0: i32 = 1 in
    let y_0: i32 = x_0 in
    unit
}

