arc-script/arc-script-test/insta/src/snapshots/hir@pattern.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/pattern.arc
---
fun main() -> unit {
    let x_0: ((i32, i32), (i32, i32)) = ((1, 2), (3, 4)) in
    let x_1: (i32, i32) = x_0.0 in
    let a_0: i32 = x_1.0 in
    let b_0: i32 = x_1.1 in
    let x_2: (i32, i32) = x_0.1 in
    let c_0: i32 = x_2.0 in
    let d_0: i32 = x_2.1 in
    unit
}

